# example-01

./: Dockerfile  README.md  compose.yml  manage.py  pyproject.toml
src/example/: __main__.py  settings.py
