[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "artiom.rotari", email = "artiom.rotari@ebs-integrator.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.2",
]

[project.scripts]
example = "example.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
